# vhe

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  build.sh  docker-compose.yml
.github/workflows/: ci.yml
benches/: benchmarks.rs  integration_tests.rs
examples/: basic_encryption.rs  operator_overrides.rs  private_statistics.rs  verifiable_computation.rs  verifiable_operators.rs  voting_system.rs
src/: encryption.rs  error.rs  homomorphic.rs  keys.rs  lib.rs  main.rs  proofs.rs  types.rs  utils.rs
